09/20/2020
- release 1.7.3

08/20/2020
- added optional support for RFC 7636 "Proof Key for Code Exchange"

04/08/2020
- openidc.call_userinfo_endpoint will now invoke the discovery
  endpoint if this has not been done before in order to detect the URI
  of the userinfo endpoint

02/06/2020
- ability to disable keepalive from lua-resty-http
  By disabling keepalive we disable the native connection pool,
  avoiding errors when dealing with invalid connections. This is
  specially useful when proxying ajax requests.

02/05/2020
- no longer echo the URI parameters back on default error page when
  OIDC provider returns an error in call to redirect_uri; see #306;
  thanks @barrelmaker97

10/02/2019
- when unauth_action is 'pass' and a token refresh fails the session
  will get marked as no longer authenticated and a proper error is
  returned; see #286; thanks @cretzel

07/15/2019
- release 1.7.2

07/09/2019
- added unauth_action='deny' to reject unauthenticated requests rather
  than start the authorization code grant flow; see #271; based on
  suggested change by @nmaniwa
- read introspection_endpoint from discovery document when present; see #255

05/01/2019
- performance enhancement by caching the result of ngx.req.get_headers
  during the authenticate call.
- added another lifecycle hook that is called when the session is
  regenerated after a token refresh

04/25/2019
- improved error handling when starting session; see #264; thanks @vershnik

03/18/2019
- fixed accidental use of global variable err in revoke_tokens_on_logout;
  see #253, #254; thanks @arcivanov
- fixed a few additional cases of using global symbols detected by lualint

03/15/2019
- allow to tap into authentication workflow by providing an option
  to specify lifecycle hooks via `opts.lifecycle`

03/07/2019
- made the checks for certain HTTP headers handle the case where
  multiple headers exist; thanks @ci42

03/06/2019
- don't overwrite opts.discovery when an error occurs calling the